Fixed manager css-bug when collapsing/expanding a region item.

--- a/core/Piranha.Manager/assets/css/style.css
+++ b/core/Piranha.Manager/assets/css/style.css
@@ -8029,8 +8029,11 @@ li.sitemap-item .actions.one {
   text-indent: 15px;
 }
 .region-list .region-list-item .region-list-body {
-  padding: 15px 15px 0;
+  padding: 0 15px 0;
   border-bottom: solid 1px #ddd;
+}
+.region-list .region-list-item .region-list-body .form-group:first-child {
+  padding-top: 15px;
 }
 .region-list-toolbar {
   margin-bottom: 0;
