--- a/core/Piranha.Manager/assets/less/forms.less
+++ b/core/Piranha.Manager/assets/less/forms.less
@@ -272,8 +272,12 @@
 		}
 
 		.region-list-body {
-			padding: 15px 15px 0;
+			padding: 0 15px 0;
 			border-bottom: solid 1px @border-color;
+
+			.form-group:first-child {
+				padding-top: 15px;
+			}
 		}
     }
 
